logApp/manifests/deployment-emptyDir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-app
  labels:
    app: log-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-app
  template:
    metadata:
      labels:
        app: log-app
    spec:
      volumes:
        - name: shared-log
          emptyDir: { }
        - name: config-vol
          configMap:
            name: log-configmap

      containers:
        - name: log-app
          image: nepjnq/log-app:1.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-log
              mountPath: /app/files
            - name: config-vol
              mountPath: /app/config

        - name: log-writer
          image: nepjnq/log-writer:1.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-log
              mountPath: /app/files
