logApp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-app-svc
spec:
  type: ClusterIP
  selector:
    app: log-app
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 8080
